GeSHiFilter CHANGELOG

2006-05-29
- documentation attribution added

2006-05-28
- first release of geshifilter module