@@ -1,22 +1,23 @@
-.geshifilter-code {
-	font-size:1em;
+pre.geshifilter {
+	display:block;
 	padding:0.5em;
 	margin:0.5em;
   border: 1px solid #CCC;
   background-color: #FFFFFF;
 }
 
-
-.geshifilter-code pre {
-	border:none;
-	padding:0;
-	margin:0;
-  background-color: transparent;
+div.geshifilter {
+	display:block;
+	padding:0.5em;
+	margin:0.5em;
+  border: 1px solid #CCC;
+  background-color: #FFFFFF;
 }
 
-.geshifilter-code div {
-	border:none;
+code.geshifilter {
+	display:inline;
 	padding:0;
 	margin:0;
-  background-color: transparent;
+  border: none;
+  background-color: none;
 }
