@@ -1,5 +1,9 @@
 GeSHiFilter CHANGELOG
 
+2006-08-07
+- #66110: block code highlighting and inline code highlighting
+- #66554: over bloated geshi.css
+
 2006-05-29
 - documentation attribution added
 
